[project]
name = "table_analyzer_flow"
version = "0.1.0"
description = "table_analyzer_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
]

[project.scripts]
kickoff = "table_analyzer_flow.main:kickoff"
plot = "table_analyzer_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
